More floaty images, fix overflowing background image

--- a/src/scss/components/_projects-list.scss
+++ b/src/scss/components/_projects-list.scss
@@ -102,7 +102,7 @@
   box-shadow: 0 10px 20px 0 rgba(85,85,85,0.20);
 }
 .background-title {
-  position: relative;
+  position: fixed;
   z-index: -1;
   width: 100vw;
   height: 100vh;
@@ -130,25 +130,80 @@
   padding-top: 10vh;
 }
 .featured-image {
+  position: absolute;
+
   @extend .is-shadowed;
-  @include sm {
-    position: absolute;
-  animation: float 4s ease-in-out infinite;
-  left:0;
-  width: 60%;
-  z-index: 1;
-  &:nth-of-type(2) {
-    right: 0;
-    animation-delay: 1s;
-    top: 30%;
-    left: 40%;
-    z-index: 0;
+
+  .floating-angle & {
+    @include sm {
+      z-index: 1;
+      left: 0;
+      width: 60%;
+      animation: float 4s ease-in-out infinite;
+
+      &:nth-of-type(2) {
+        z-index: 0;
+        top: 30%;
+        right: 0;
+        left: 40%;
+        animation-delay: 1s;
+
+        filter: blur(1px) brightness(99%);;
+      }
+      &:nth-of-type(3) {
+        z-index: -2;
+        top: 50%;
+        animation-delay: 1.5s;
+
+        filter: blur(2px) brightness(97);
+      }
+    }
   }
-  &:nth-of-type(3) {
-    top: 50%;
-    z-index: -2;
-    animation-delay: 1.5s;
+  .floating-pyramid & {
+    width: 60%;
+
+    @include sm {
+      width: 30%;
+      animation: float 4s ease-in-out infinite;
+      &:nth-of-type(1) {
+        z-index: 3;
+        top: 0;
+        right: 0;
+        left: 0;
+        margin: 0 auto;
+      }
+      &:nth-of-type(2) {
+        top: 10%;
+        left: 15%;
+        animation-delay: 1s;
+      }
+      &:nth-of-type(3) {
+        top: 10%;
+        right: 15%;
+        animation-delay: 1.5s;
+
+        filter: blur(1px) brightness(99%);
+      }
+    }
+    &:nth-of-type(1) {
+      z-index: 3;
+      top: 0;
+      right: 0;
+      left: 0;
+      margin: 0 auto;
+    }
+    &:nth-of-type(2) {
+      z-index: 2;
+      top: 10%;
+      left: 0;
+
+      filter: blur(1px) brightness(99%);
+    }
+    &:nth-of-type(3) {
+      top: 15%;
+      right: 0;
+
+      filter: blur(2px) brightness(97%);
+    }
   }
-  }
-  
 }
